--- a/survey_analysis.ipynb
+++ b/survey_analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "survey_analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNPdXhMybJ6UC4Gx+Vib1PU",
+      "authorship_tag": "ABX9TyPr49/8vXpgge8ipR2aThSX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,6 +39,127 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Q2yjrwHKfRCf",
+        "outputId": "83f1db1a-17ca-436c-b439-84f9e59fb3d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 284
+        }
+      },
+      "source": [
+        "import pandas as pd\n",
+        "url = \"https://github.com/yairrinat/Survey_Analysis/blob/main/WMO_SURVEY.xlsx?raw=true\"\n",
+        "\n",
+        "\n",
+        "df = pd.read_excel(url)\n",
+        "df.head()\n"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Country/Territory:</th>\n",
+              "      <th>Name:</th>\n",
+              "      <th>Institution/Organization:</th>\n",
+              "      <th>Designation/position (name of post/duty, e.g. Director):</th>\n",
+              "      <th>E-mail:</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Albania</td>\n",
+              "      <td>Klodian Zaimi</td>\n",
+              "      <td>Institute of Geoscience Energy Water and Envir...</td>\n",
+              "      <td>Supervisor chief forecasting centre</td>\n",
+              "      <td>klodianzaimi@yahoo.com</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Argentina</td>\n",
+              "      <td>Mariano Re</td>\n",
+              "      <td>Instituto Nacional del Agua (INA)</td>\n",
+              "      <td>Researcher at Hydraulics Laboratory - Hidrolog...</td>\n",
+              "      <td>m.re@ina.gob.ar</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Australia</td>\n",
+              "      <td>Jolyon Taylor</td>\n",
+              "      <td>Gippsland Water</td>\n",
+              "      <td>Senior Water Resources Engineer</td>\n",
+              "      <td>jolyon.taylor@gippswater.com.au</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Australia</td>\n",
+              "      <td>Robert Argent</td>\n",
+              "      <td>Bureau of Meteorology</td>\n",
+              "      <td>Hydrological Advisor to PR</td>\n",
+              "      <td>Robert.argent@bom.gov.au</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  Country/Territory:  ...                          E-mail:\n",
+              "0                NaN  ...                              NaN\n",
+              "1            Albania  ...          klodianzaimi@yahoo.com \n",
+              "2          Argentina  ...                  m.re@ina.gob.ar\n",
+              "3          Australia  ...  jolyon.taylor@gippswater.com.au\n",
+              "4          Australia  ...         Robert.argent@bom.gov.au\n",
+              "\n",
+              "[5 rows x 5 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HfRLc15FfQyv"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -52,7 +173,7 @@
         "drive.mount('/gdrive')\n",
         "%cd /gdrive"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,7 +204,7 @@
         "\n",
         "df_personal.head()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
