Removed the translation, added function to identify numbers and sum them  V2

--- a/survey_analysis.ipynb
+++ b/survey_analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "survey_analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMZwn6Pmr6GlacsCBjZ23Th",
+      "authorship_tag": "ABX9TyN6A/6fa/5d4V/iXFnoj637",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,11 +75,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "Q2yjrwHKfRCf",
-        "outputId": "4b34b8cc-49ae-404e-8729-0ff866bcb8a4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 848
-        }
+        },
+        "outputId": "4b34b8cc-49ae-404e-8729-0ff866bcb8a4"
       },
       "source": [
         "# link to excel file:\n",
@@ -375,13 +375,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PIe4dIOrSVh8",
-        "outputId": "68aef8c7-0e72-45c9-c610-11cd2c936bd5"
+        "outputId": "90f6b2d9-700a-479c-bf93-c657e6f550f6"
       },
       "source": [
-        "d = {'a': 1, 'b': \"25 t o 4\", 'c': \"fh\"}\n",
-        "aa = pd.Series(data=d, index=['a', 'b', 'c'])\n",
-        "#aa = pd.Series({'col1': [\"heh\", \"8\", \"7 4 /,dlfk 7\"]})\n",
-        "aa.head()\n",
+        "\n",
         "\n",
         "aa = df_staff.iloc[1:,3]\n",
         "print(aa.head())\n",
@@ -400,6 +397,7 @@
         "# return re.findall(r\"\\d+\",df)\n",
         "\n",
         "# sum the numbers in each cell:\n",
+        "#if aa will be a df then I should change the map to applymap !!\n",
         "new = aa.map(identity_total_personal)\n",
         "print(new.head())\n",
         "\n",
@@ -415,19 +413,19 @@
         "# type(df_staff[1:,3])\n",
         "\n"
       ],
-      "execution_count": 100,
+      "execution_count": 101,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "Albania       8.0\n",
-            "Argentina    99.0\n",
-            "Australia     NaN\n",
-            "Australia    47.0\n",
-            "Bahamas       2.0\n",
-            "Name: Unnamed: 4, dtype: float64\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "pandas.core.frame.DataFrame"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 101
         }
       ]
     },
