loading population density data and arranging it

--- a/survey_analysis.ipynb
+++ b/survey_analysis.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "survey_analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN1jRWs+6HVQVW8C3vOaG1e",
+      "toc_visible": true,
+      "history_visible": true,
+      "authorship_tag": "ABX9TyMwiovKNKgLr9ujzUpJDlPt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +51,7 @@
         "import re\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -78,29 +80,45 @@
         "id": "Q2yjrwHKfRCf",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 848
+          "height": 874
         },
-        "outputId": "85cb4b21-5aa5-424d-edac-d8358201624a"
+        "outputId": "d7123022-4e92-46d8-9fe8-ebbc31a61157"
       },
       "source": [
         "# link to excel file:\n",
-        "url = \"https://github.com/yairrinat/Survey_Analysis/blob/main/WMO_SURVEY.xlsx?raw=true\"\n",
+        "url_world = \"https://github.com/yairrinat/Survey_Analysis/blob/main/WMO_SURVEY.xlsx?raw=true\"\n",
+        "url_pop = \"https://github.com/yairrinat/Survey_Analysis/blob/main/world_pop_all.xlsx?raw=true\"\n",
+        "url_country_area = \"https://github.com/yairrinat/Survey_Analysis/blob/main/country_area_new.xlsx?raw=true\"\n",
         "\n",
         "#load personal data:\n",
-        "df_personal = pd.read_excel(url,index_col = 0,header = 0, sheet_name = \"Person details\")\n",
+        "df_personal = pd.read_excel(url_world,index_col = 0,header = 0, sheet_name = \"Person details\")\n",
         "df_personal = df_personal.iloc[1:,:] # remove first row\n",
         "#print(df_personal)\n",
         "\n",
         "#load staff data:\n",
-        "df_staff = pd.read_excel(url,index_col=0,header = 0, sheet_name = \"STAFF\")\n",
+        "df_staff = pd.read_excel(url_world,index_col=0,header = 0, sheet_name = \"STAFF\")\n",
         "list_ind = df_staff.index.to_list()\n",
         "list_ind[0] = \"secondary_title\"\n",
         "df_staff.index= list_ind\n",
         "df_staff.head(10)\n",
         "\n",
-        "#load ... to be continued later"
+        "#load ... to be continued later\n",
+        "\n",
+        "#load population data:\n",
+        "df_pop = pd.read_excel(url_pop)\n",
+        "# select only the population density and YEAR 2020:\n",
+        "df_pop = df_pop[df_pop['Year'] == 2019]\n",
+        "df_pop = df_pop[df_pop['Series'] == \"Population density\"]\n",
+        "df_pop.drop([\"Region/Country/Area\",\"Footnotes\",\"Source\", \"Series\", \"Year\"],axis = 1, inplace = True)\n",
+        "df_pop.rename(columns={\"Population, density and surface area\"\t: \"Country\", \"Value\" : \"pop_density_2019\"}, inplace = True)\n",
+        "df_pop.set_index(\"Country\",inplace = True)\n",
+        "df_pop\n",
+        "\n",
+        "df_staff\n",
+        "df = pd.concat([df_staff,df_pop])\n",
+        "df"
       ],
-      "execution_count": 2,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -140,6 +158,7 @@
               "      <th>Unnamed: 14</th>\n",
               "      <th>Please indicate the trend of the staffing figures during the recent 3-5 years:</th>\n",
               "      <th>Unnamed: 16</th>\n",
+              "      <th>pop_density_2019</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -161,6 +180,7 @@
               "      <td>Over 51 years:</td>\n",
               "      <td>Response</td>\n",
               "      <td>Other (please specify)</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Albania</th>\n",
@@ -179,6 +199,7 @@
               "      <td>20</td>\n",
               "      <td>15</td>\n",
               "      <td>Steadily decreasing</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -199,9 +220,11 @@
               "      <td>146</td>\n",
               "      <td>No significant year-to-year change</td>\n",
               "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Australia</th>\n",
+              "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -237,71 +260,30 @@
               "      <td>16</td>\n",
               "      <td>No significant year-to-year change</td>\n",
               "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Bahamas</th>\n",
-              "      <td>147</td>\n",
-              "      <td>238</td>\n",
-              "      <td>65, Female = 36, Male = 29</td>\n",
-              "      <td>2</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>87</td>\n",
-              "      <td>79</td>\n",
-              "      <td>2</td>\n",
-              "      <td>44</td>\n",
-              "      <td>96</td>\n",
-              "      <td>109</td>\n",
-              "      <td>134</td>\n",
-              "      <td>Other (please specify)</td>\n",
-              "      <td>Staffing compliment is decreasing, based on em...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Bangladesh</th>\n",
-              "      <td>1</td>\n",
-              "      <td>13</td>\n",
-              "      <td>700/2800</td>\n",
-              "      <td>1/13</td>\n",
-              "      <td>50/450</td>\n",
-              "      <td>1000/4000</td>\n",
-              "      <td>200/800</td>\n",
-              "      <td>1000</td>\n",
-              "      <td>4000</td>\n",
-              "      <td>0%</td>\n",
-              "      <td>15%</td>\n",
-              "      <td>30%</td>\n",
-              "      <td>35%</td>\n",
-              "      <td>20%</td>\n",
-              "      <td>Don't know</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>Belarus</th>\n",
-              "      <td>783</td>\n",
-              "      <td>358</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>4/1</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>206</td>\n",
-              "      <td>46</td>\n",
-              "      <td>32</td>\n",
-              "      <td>74</td>\n",
-              "      <td>73</td>\n",
-              "      <td>67</td>\n",
-              "      <td>134</td>\n",
-              "      <td>Без существенных изменений от года к году</td>\n",
-              "      <td>NaN</td>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>Belgium</th>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>1</td>\n",
-              "      <td>5</td>\n",
+              "      <th>Wallis and Futuna Islands</th>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -311,52 +293,121 @@
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>En augmentation constante</td>\n",
               "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>81.6571</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>Belize</th>\n",
-              "      <td>3</td>\n",
-              "      <td>3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>4</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
+              "      <th>Western Sahara</th>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>2</td>\n",
-              "      <td>3</td>\n",
-              "      <td>1</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>No significant year-to-year change</td>\n",
               "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>2.1897</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Yemen</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>55.2341</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Zambia</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>24.0265</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Zimbabwe</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>37.8583</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
+              "<p>355 rows × 17 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "                Please provide the total number of staff in your institution/organization by gender:  ...                                        Unnamed: 16\n",
-              "secondary_title                                            Female:                                    ...                             Other (please specify)\n",
-              "Albania                                                         15                                    ...                                                NaN\n",
-              "Argentina                                                       95                                    ...                                                NaN\n",
-              "Australia                                                      NaN                                    ...                                                NaN\n",
-              "Australia                                                      525                                    ...                                                NaN\n",
-              "Bahamas                                                        147                                    ...  Staffing compliment is decreasing, based on em...\n",
-              "Bangladesh                                                       1                                    ...                                                NaN\n",
-              "Belarus                                                        783                                    ...                                                NaN\n",
-              "Belgium                                                        NaN                                    ...                                                NaN\n",
-              "Belize                                                           3                                    ...                                                NaN\n",
+              "                          Please provide the total number of staff in your institution/organization by gender:  ... pop_density_2019\n",
+              "secondary_title                                                      Female:                                    ...              NaN\n",
+              "Albania                                                                   15                                    ...              NaN\n",
+              "Argentina                                                                 95                                    ...              NaN\n",
+              "Australia                                                                NaN                                    ...              NaN\n",
+              "Australia                                                                525                                    ...              NaN\n",
+              "...                                                                      ...                                    ...              ...\n",
+              "Wallis and Futuna Islands                                                NaN                                    ...          81.6571\n",
+              "Western Sahara                                                           NaN                                    ...           2.1897\n",
+              "Yemen                                                                    NaN                                    ...          55.2341\n",
+              "Zambia                                                                   NaN                                    ...          24.0265\n",
+              "Zimbabwe                                                                 NaN                                    ...          37.8583\n",
               "\n",
-              "[10 rows x 16 columns]"
+              "[355 rows x 17 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 27
         }
       ]
     },
@@ -368,6 +419,17 @@
       "source": [
         ""
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nmNcGeJ47TtC"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -423,7 +485,7 @@
         "# type(df_staff[1:,3])\n",
         "\n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
